css/index.css
/* A modern CSS reset by Andy Bell */
/* https://hankchizljaw.com/wrote/a-modern-css-reset/ */
/* https://raw.githubusercontent.com/hankchizljaw/modern-css-reset/master/src/reset.css */
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default padding */
ul[class],
ol[class] {
  padding: 0;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
  margin: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* Remove list styles on ul, ol elements with a class attribute */
ul[class],
ol[class] {
  list-style: none;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: none;
  text-decoration-skip-ink: auto;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.15em;
  text-decoration-color: #7898;
}

/* Make images easier to work with */
img {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations and transitions for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* end of CSS reset */
:root {
  --red: #c5004a;
  --darkred: #7f0036;
  --light_grey: #e0e0e0;
  --grey: #c0c0c0;
  --light_slate_grey: #778899;
  --dark_slate_grey: #303030;
  --navy: #17050f;
  --tiber: #082840;
  --white: #fff;
  --almost_dark: #1b2431;
  --ruby: #ca0147;
  --azure: #069af3;
  --cerulean: #0485d1;
  --nice_blue: #107ab0;
  --denim: #3b638c;
  --cadet_blue: #4e7496;
  --seashell: #fff4f2;
  --eggshell: #ffffd4;
  --snow: #fffafa;
  --pale: #fff9d0;
  --blanched_almond: #fce6c9;
  --zinc_white: #fdf8ff;
  --old_lace: #fdf5e6;
  --rum_swizzle: #f9f8e4;
  --pink_light: #ffb6c1;
  --pale_grey: #fdfdfe;
  --dusty_teal: #4c9085;
  --dusty_orange: #f0833a;
  --dusty_purple: #825f87;
  --darkish_pink: #da467d;
  --purplish: #94568c;
  --dull_blue: #49759c;
  --neon_blue: #04d9ff;
}

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  color: var(--almost_dark);
  background-color: var(--old_lace);
  background-image: url("/img/circles.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

h1 {
  color: var(--light_slate_grey);
  margin-top: 2rem;
  margin-bottom: 2rem;
}

p:last-child {
  margin-bottom: 0;
}

p,
.tmpl-post li {
  line-height: 1.625em;
}

p a[href] {
  color: var(--cerulean);
  font-weight: bold;
}

p a[href]:visited {
  color: var(--navy);
}

main {
  padding: 2em 0;
  padding-left: calc(25vw - 200px);
  max-width: calc(200px + 48vw);
  background-color: #fdf5e6ff;
}

main p,
main pre,
main .tmpl-post li {
  max-width: 48em;
}

article {
  padding: 1em;
  width: auto;
}

/* Natural flow and rhythm in articles by default */
main > *+*,
article > *+*,
blockquote > *+* {
  margin-top: 1em;
}

blockquote {
  padding: 1em 1em 1em 2em;
  background-color: var(--pale_grey);
  border-left: 8px solid var(--nice_blue);
}

.article-footer {
  border-top: 1px dotted var(--dark_slate_grey);
  padding: 1em;
}

#socials {
  text-align: right;
  margin-top: 1em;
}
.social a {
  margin: 0 2px;
}
.social i {
  font-size: 2em;
  padding: 2px;
}
.social i:hover {
  color: var(--neon_blue);
}
i.fab {
  font-weight: 400;
}
i.fas {
  font-weight: 900;
}

header {
  /* border-bottom: 2px dotted var(--ruby); */
  border-bottom: 4px solid var(--light_slate_grey);
  padding-bottom: 1rem;
}

header:after {
  content: "";
  display: table;
  clear: both;
}

footer {
  margin-top: 2em;
  background-image: linear-gradient(to right, var(--azure), var(--ruby));
  display: flex;
  justify-content: flex-end;
}

#footer-content {
  color: var(--eggshell);
  background-color: transparent;
  font-weight: bold;
  font-size: 100%;
  padding: 40px 20px;
}

#footer-content a {
  color: var(--eggshell);
  background-color: transparent;
  text-decoration-skip-ink: auto;
  text-decoration-skip-ink: none;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.15em;
  text-decoration-color: #ffffd466;
}

/*
#svg-circle {
  position: fixed;
  top: -25vw;
  left: -25vw;
  width: 150vw;
  height: 150vw;
  z-index: 0;
}
*/

pre,
code {
  font-family: Hasklig, Hack, Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}

pre {
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: 0.5em 0;
}

.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none;
  /* override del, ins, mark defaults */
  color: inherit;
  /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}

/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}

.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}

.highlight-line-add {
  background-color: #45844b;
}

.highlight-line-remove {
  background-color: #902f2f;
}

/* header */
.home {
  padding: 0;
  float: left;
  margin: 1rem 0 0 5vw;
  /* border-bottom: 2px dotted var(--ruby); */
}

.home a {
  color: var(--ruby);
  text-decoration: dotted 0.15em underline var(--ruby);
  text-decoration-skip-ink: auto;
  text-decoration-style: dotted;
  text-decoration-color: rgba(202, 1, 71, 0.1);
  text-decoration-thickness: 6em;
  text-underline-offset: 2em;
  transition-property: text-decoration-color, text-decoration-thickness, text-underline-offset;
  transition-duration: 5s;
}

.home :link:hover {
  text-decoration-style: dotted;
  text-decoration-color: var(--ruby);
  text-decoration-thickness: 0.15em;
  text-underline-offset: 0.05em;
  transition-timing-function: ease;
  transition-property: text-decoration-color, text-decoration-thickness, text-underline-offset;
  transition-duration: 5s;
  transition-timing-function: ease;
}

/* nav */
ul.nav {
  padding: 0;
  list-style: none;
  float: right;
  margin: 1rem 0 0 2rem;
}

.nav-item {
  display: inline-block;
  margin-right: 1em;
}
.nav-item :link {
  text-transform: lowercase;
  font-weight: 700;
  text-decoration: underline;
  text-decoration-color: transparent;
}
.nav-item :link:hover {
  color: var(--cerulean);
  text-decoration-color: var(--cerulean);
  text-decoration-style: solid;
  text-underline-offset: 0;
  text-decoration-thickness: 0.5em;
}

.nav-item-active :link {
  color: var(--light_slate_grey);
  text-decoration: underline;
  text-decoration-color: var(--light_slate_grey);
  text-underline-offset: 0;
  text-decoration-thickness: 0.5em;
}

.nav-item-active :link:hover {
  color: var(--cerulean);
  text-decoration-color: var(--cerulean);
}

.pages_list {
  border-collapse: collapse;
  border-spacing: 0;
  table-layout: fixed;
}

.pages_list th {
  text-align: left;
  padding: 0.125em 1em;
  border-bottom: 2px solid var(--light_slate_grey);
}

.pages_list td {
  padding: 0.25em 1em;
  border-bottom: 1px dotted var(--light_slate_grey);
  /* border-top: 1px dotted var(--light_slate_grey); */
}

.col1 {
  width: 40%;
}

.col2 {
  width: 60%;
}

/* Notes list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist2 {
  list-style: none;
  padding: 0;
}

.postlist-item {
  counter-increment: start-from -1;
}

.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: ""counter(start-from, decimal-leading-zero) "__";
  line-height: 100%;
  text-align: right;
}

.postlist-date,
.postlist-item:before {
  font-size: 0.875em; /* 14px /16 */
  color: var(--darkgray);
}

.postlist2 .postlist-item::before {
  content: "";
}

.postlist-date {
  word-spacing: -0.5px;
}

.postlist-link {
  display: inline-block;
  padding: 0.25em 0.375em; /* 4px 6px /16 */
  color: var(--cerulean);
/*  text-decoration: underline solid 0.125em;*/
  text-decoration-skip-ink: auto;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.15em;
  /* border-bottom: 2px solid var(--cerulean); */
}

.postlist-item-active .postlist-link {
  font-weight: bold;
}

.tmpl-home .postlist-link {
  font-size: 1.1875em;
  /* 19px /16 */
  font-weight: 700;
}

/* Tags */
.tag {
  font-family: monospace;
  display: inline-block;
  vertical-align: super;
  /* text-transform: uppercase; */
  font-size: 0.75em;
  /* 12px /16 */
  padding: 0 0.25em;
  /* 3px /12 */
  margin-left: 0.75em;
  /* 9px /12 */
  color: var(--old_lace);
  font-weight: 600;
  background-color: var(--cerulean);
  border: 0.25em solid var(--light_slate_grey);
  border-radius: 0.25em;
  text-decoration: none;
}

.tag:focus {
  /* thanks Kevin Powell https://www.youtube.com/watch?v=Mvu5OMGcdVA */
  box-shadow:
    0 0 0 2px var(--old_lace),
    0 0 0 4px var(--light_slate_grey);
  /* border-radius: 0; */
}

.tags_page {
  /* when tags are displayed on the tags page, make them display better/bigger */
  font-size: 1em;
  padding: 0.25em;
  /* 6px /16 */
  margin: 1em;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em;
  /* 16px 10px /16 */
}

.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}

a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}

a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover>a[href].direct-link,
:hover>a[href].direct-link:visited {
  color: #aaa;
}

